# cmv12k_color_response

./: color_matrices.ipynb  pyproject.toml
cmv12k_data/: README.md  all.csv  blue.csv  green_blue.csv  green_red.csv  mono.csv  nir.csv  red.csv
cmv12k_data/raw/: convert.py  green_blue.csv  green_red.csv  mono.csv  nir.csv  red.csv
data/: all.csv  blue.csv  green_blue.csv  green_red.csv  mono.csv  nir.csv  red.csv
data_raw/: blue.csv  convert.py
filter_data/: Hayda.csv  Hoya.csv  README.md  UQG.csv  all.csv
filter_data/raw/: Hayda.csv  Hoya.csv  UQG.csv  convert.py
