[tool.poetry]
name = "cmv12k_color_response"
version = "0.1.0"
description = ""
authors = ["Jaro Habiger <jarohabiger@googlemail.com>"]

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.23.3"
colour-science = "^0.4.1"
jupyter = "^1.0.0"
matplotlib = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
